// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders button with href correctly 1`] = `
<DocumentFragment>
  <a
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary"
    href="https://mia-platform.eu"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Button
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button Component renders circle button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-circle ant-btn-primary"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      +
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders danger filled button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-dangerous"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders danger ghost button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-background-ghost ant-btn-dangerous button-ghost"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders danger outline button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-background-ghost ant-btn-dangerous"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders disabled button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary"
    disabled=""
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders large button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-lg"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders loading button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-loading"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span
      class="ant-btn-icon ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders neutral ghost button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-default button-ghost"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders neutral outline button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-default"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary filled button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary ghost button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-background-ghost button-ghost"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary outline button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-background-ghost"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders small button correctly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-1vr7spz ant-btn-primary ant-btn-sm"
    rel="noopener noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;
